Add flexbox layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Material Resume Template</title>
   </head>
 <body>
-  <nav class="main-nav">
+  <nav class="main-nav shadow__text">
     <div class="wrapper">
       <ul class="row">
         <li><a href="#about" id="hello-link">Hello</a></li>
@@ -15,10 +15,15 @@
       </ul>
     </div>
   </nav>
-  <header class="large-hero shadow">
+  <header class="large-hero shadow shadow__text">
     <div class="wrapper">
-      <h1 class="large-hero__title">Art Vandelay</h1>
-      <h2 class="large-hero__subtitle">Architect</h2>
+      <div class="row row__space-between">
+        <div class="large-hero__text-container">
+          <h1 class="large-hero__title">Art Vandelay</h1>
+          <h2 class="large-hero__subtitle">Architect</h2>
+        </div>
+        <img class="row__align-right large-hero__image" src="img/Art_Vandelay.png" alt="Art Vandelay">
+      </div>
     </div>
   </header>
   <main>
@@ -47,7 +52,7 @@
           </div>
         </div>
       </div>
-      <div class="row row__large-7 shadow">
+      <div class="row row__large-6 shadow">
         <div class="row__aside-right">
           <div class="copy-container">
             <p>
