Add main wrapper, signature and bottom margin

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Material Resume Template</title>
   </head>
-<body>
+<body class="body wrapper">
   <nav class="main-nav shadow__text">
-    <div class="wrapper">
+    <div class="wrapper--inner">
       <ul class="row">
         <li><a href="#about" id="hello-link">Hello</a></li>
         <li><a href="#projects" id="resume-link">Resume</a></li>
@@ -16,7 +16,7 @@
     </div>
   </nav>
   <header class="large-hero shadow shadow__text">
-    <div class="wrapper">
+    <div class="wrapper--inner">
       <div class="row row__space-between">
         <div class="large-hero__text-container">
           <h1 class="large-hero__title">Art Vandelay</h1>
@@ -52,9 +52,9 @@
           </div>
         </div>
       </div>
-      <div class="row row__large-6 shadow">
+      <div class="row row__large-6 page-section__white shadow">
         <div class="row__aside-right">
-          <div class="copy-container">
+          <div class="copy-container copy-container__bottom-margin">
             <p>
               Dear Mr. Krueger,
             </p>
@@ -79,6 +79,9 @@
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptates iusto quasi, facere, assumenda ducimus impedit neque laboriosam, quo fugit dolor sint itaque saepe ipsa ipsam, corporis harum voluptate dolorum!
             </p>
+            <img class="copy-container--signature" src="img/signature.png" alt="signature">
+            <p>Art Vandelay<br>
+               Architect</p>
           </div>
         </div>
       </div>
