--- a/src/index.html
+++ b/src/index.html
@@ -94,19 +94,19 @@
         <a href="#" class="row row__center row__center-vertical footer--contact-box__icon">
           <i class="fa fa-github" aria-hidden="true"></i>
         </a>
-        <a href="#">www.github.com/Art_Vandelay</a>
+        <a class="footer--link" href="#">www.github.com/Art_Vandelay</a>
       </div>
       <div class="row row__center row__center-vertical footer--contact-box">
         <a href="#" class="row row__center row__center-vertical footer--contact-box__icon">
           <i class="fa fa-linkedin" aria-hidden="true"></i>
         </a>
-        <a href="#">www.linkedin.com/Art_Vandelay</a>
+        <a class="footer--link" href="#">www.linkedin.com/Art_Vandelay</a>
       </div>
       <div class="row row__center row__center-vertical footer--contact-box">
         <a href="#" class="row row__center row__center-vertical footer--contact-box__icon">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="#">www.twitter.com/Art_Vandelay</a>
+        <a class="footer--link" href="#">www.twitter.com/Art_Vandelay</a>
       </div>
     </div>
     <div class="footer__dark">
