Add z-index to cover shadow and put list items into anchor tags

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
   <nav class="main-nav shadow__text">
     <div class="wrapper--inner">
       <ul class="row">
-        <li><a href="#about" id="hello-link">Hello</a></li>
-        <li><a href="#projects" id="resume-link">Resume</a></li>
-        <li><a href="#contact" id="portfolio-link">Portfolio</a></li>
+        <a href="#about" id="hello-link"><li>Hello</li></a>
+        <a href="#projects" id="resume-link"><li>Resume</li></a>
+        <a href="#contact" id="portfolio-link"><li>Portfolio</li></a>
       </ul>
     </div>
   </nav>
