Add and modify margins

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <div class="row__aside-left">
           <div class="copy-container copy-container__border-bottom">
             <h4 class="copy-container--heading copy-container--heading__small">To</h4>
-            <p>Mr Krueger<br>
+            <p class="copy-container__no-margin-top copy-container__more-margin-bottom">Mr Krueger<br>
             Krueger Industrial Smoothing<br>
             W81st St<br>
             New York<br>
@@ -42,15 +42,15 @@
           </div>
           <div class="copy-container copy-container__border-bottom">
             <h4 class="copy-container--heading copy-container--heading__small">Position</h4>
-            <p>Architect</p>
+            <p class="copy-container__no-margin-top copy-container__more-margin-bottom">Architect</p>
           </div>
           <div class="copy-container copy-container__border-bottom">
             <h4 class="copy-container--heading copy-container--heading__small">Reference No.</h4>
-            <p>AB1234567890</p>
+            <p class="copy-container__no-margin-top copy-container__more-margin-bottom">AB1234567890</p>
           </div>
           <div class="copy-container copy-container__border-bottom">
             <h4 class="copy-container--heading copy-container--heading__small">Date</h4>
-            <p>September 12, 1993</p>
+            <p class="copy-container__no-margin-top copy-container__more-margin-bottom">September 12, 1993</p>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem voluptates iusto quasi, facere, assumenda ducimus impedit neque laboriosam, quo fugit dolor sint itaque saepe ipsa ipsam, corporis harum voluptate dolorum!
             </p>
             <img class="copy-container--signature" src="img/signature.png" alt="signature">
-            <p>Art Vandelay<br>
+            <p><span class="copy-container--heading__black">Art Vandelay</span><br>
                Architect</p>
           </div>
         </div>
